# ljx_high_speed_communication

./: .gitignore  Cargo.toml  readme.md
dust_code/: azd_client.rs  profile_coverter.rs
dust_code/poc/: buffer_test.rs  cli_sample.rs  convert_u8.rs
dust_code/poc/lib/: dummy.rs
examples/: buffer_reader.rs  buffer_test_2.rs  convert_u8.rs  csv_writer.rs  make_dummy_data.rs  use_wrapper.rs
examples/lib/: csv_writer.rs  dummy.rs  mod.rs
ljx/: Cargo.toml  build.rs
ljx/c_src/: bridge.c
ljx/src/: ffi.rs  lib.rs  types.rs
my_init/: Cargo.toml
my_init/src/: lib.rs  load_config.rs  utilitys.rs
mylogger/: Cargo.toml
mylogger/src/: lib.rs
py_src/: mesh_ply_to_jpg.py  ply_to_mesh_ply.py
src/: azd_blocking_client.rs  converter_ply.rs  converter_raw_to_image.rs  lib.rs  ljx_data_converter.rs  main.rs  profile_converter.rs  profile_writer.rs
src/lib/: mod.rs
