[package]
name = "ljx_high_speed_communication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
  "ljx",
  "mylogger",
  ]

[workspace.dependencies]
anyhow = "1.0"
log = "0.4"

[dependencies]
ljx = { path = "./ljx" }
mylogger = { path = "./mylogger" }
log = { workspace = true }
anyhow = { workspace = true }
nom = "7.1.1"
bytes = "1.3.0"
rand = "0.6"