[package]
name = "ljx_high_speed_communication"
version = "0.1.0"
edition = "2021"
default-run = "run_ljx"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
  "ljx",
  "my_init",
  ]



[dependencies]
ljx = { path = "./ljx" }
my_init= { path = "./my_init" }
log = "0.4"
anyhow = "1.0"
nom = "7.1.1"
bytes = "1.3.0"
rand = "0.8.5"
tokio = {version = "1.21.0", features = ["full"]}